<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".text.TextFragment">

        <TextView
            android:id="@+id/textView"
            style="@style/text_intro_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_small"
            android:text="@string/text_text_intro"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_view_current_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Current text: "
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            android:layout_margin="@dimen/margin_small"/>

        <EditText
            android:id="@+id/edit_text_new_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/hint_new_message"
            tools:hint="@string/hint_new_message"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_margin="@dimen/margin_small"
            app:layout_constraintTop_toBottomOf="@+id/text_view_current_text" />

        <Button
            android:id="@+id/button_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_save_message"
            android:layout_margin="@dimen/margin_small"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_text_new_text" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>